<resources>
    <string name="app_name">TechTask</string>

    <string name="github_tab_title">GitHub User Search</string>
    <string name="login_tab_title">Login</string>
    <string name="todo_tab_title">ToDo</string>
    <string name="github_textfield_search_term_hint">Search Term</string>
    <string name="no_browser">You have no browser installed</string>
    <string name="error_title">Error!</string>
    <string name="dimiss_button_text">Close</string>
    <string name="login_title">BulbLoginScreen</string>
    <string name="login_email_address_hint">Email Address</string>
    <string name="login_password_hint">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">LOG IN</string>
    <string name="how_does_it_work">HOW DOES IT WORK?</string>
    <string name="todo">ToDo</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>

</resources>
