<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margins"
        android:layout_marginStart="@dimen/activity_horizontal_margins"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/login_title_to_textfield_margin"
            android:text="@string/login_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/item_to_item_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_email_address_input_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-light"
                android:hint="@string/login_email_address_hint"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:textSize="@dimen/input_field_text_size" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_password_input_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-light"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:lines="1"
                android:textSize="@dimen/input_field_text_size" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_between_text_fields_and_button"
            android:layout_marginTop="@dimen/margin_between_text_fields_and_button"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/remember_me"
                android:textColor="@android:color/black"
                android:textSize="@dimen/medium_text_size" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/forgot_password"
                android:textColor="@android:color/black"
                android:textSize="@dimen/medium_text_size" />

        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green_solid_button"
            android:text="@string/log_in"
            android:textSize="@dimen/buttons_text_size" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/green_bordered_button"
            android:paddingEnd="@dimen/how_does_it_work_button_padding"
            android:paddingStart="@dimen/how_does_it_work_button_padding"
            android:text="@string/how_does_it_work"
            android:textSize="@dimen/buttons_text_size" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

</ScrollView>